[gd_scene load_steps=3 format=3 uid="uid://co1ys4ggr68mk"]

[ext_resource type="Script" uid="uid://crcovtlk15ppi" path="res://Changer.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://k0y5fyud50c1" path="res://Intro.ogg" id="2"]

[node name="Changer" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -511.5
offset_top = -299.0
offset_right = 511.5
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 33.0
offset_right = 960.0
offset_bottom = 228.0

[node name="DeviceInfo" type="Label" parent="."]
layout_mode = 0
offset_left = -64.0
offset_top = 248.0
offset_right = 1046.0
offset_bottom = 284.0
horizontal_alignment = 1

[node name="SetDevice" type="Button" parent="."]
layout_mode = 0
offset_left = 425.723
offset_top = 309.733
offset_right = 556.723
offset_bottom = 354.733
text = "Set Device"

[node name="PlayAudio" type="Button" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 373.0
offset_right = 557.0
offset_bottom = 414.0
text = "Play Audio"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2")
volume_db = -6.0

[connection signal="button_down" from="SetDevice" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="PlayAudio" to="." method="_on_Play_Audio_button_down"]
